<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/if_home_1608930"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/services_icon"
            android:title="@string/services" />
        <item
            android:id="@+id/nav_ways"
            android:icon="@drawable/way_icon"
            android:title="@string/my_ways" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/profile_icon"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_setings"
            android:icon="@drawable/settings_icon"
            android:title="@string/settings" />
    </group>


    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/about_icon"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
