<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cbd4ca"
        android:layout_margin="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">


            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="120dp"
                android:layout_height="90dp"
                android:padding="4dp"
                android:src="@drawable/placeholder"
                android:contentDescription="@string/image__ways" />

            <com.github.ivbaranov.mfb.MaterialFavoriteButton
                android:id="@+id/fav"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_above="@+id/tvDestination"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_above="@+id/tvDate"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="10dp"
                android:src="@drawable/ic_share_black_24dp"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <ImageView
                android:id="@+id/wtsp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/tvDate"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:src="@drawable/whatsapp"
                tools:ignore="ContentDescription,RtlSymmetry" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@id/imageProfile"
                android:text="@string/full_name_ways"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/imageProfile" />

            <TextView
                android:id="@+id/tvDestination"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvSource"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/imageProfile"
                android:layout_toRightOf="@+id/imageProfile"
                android:layout_marginLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/destination_ways"
                android:textStyle="bold"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_marginStart="5dp"
                android:paddingEnd="5dp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDestination"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/imageProfile"
                android:text="@string/date_ways"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/imageProfile" />
            <TextView
                android:id="@+id/tvTime"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvDate"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/imageProfile"
                android:text="@string/time_ways"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/imageProfile" />
            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvTime"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/imageProfile"
                android:text="@string/phone_ways"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/imageProfile" />
            <TextView
                android:id="@+id/tvCarId"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvPhone"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@id/imageProfile"
                android:text="@string/rating_ways"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/imageProfile" />

            <TextView
                android:id="@+id/tvSource"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvFullName"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_toEndOf="@id/imageProfile"
                android:layout_toRightOf="@id/imageProfile"
                android:text="@string/source_ways"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textStyle="bold" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>