 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.mourad.navigationandroid.HomeFragment">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/carinside">

            <EditText
                android:id="@+id/source"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="50dp"
                android:layout_marginStart="1dp"
                android:background="@drawable/searchback"
                android:gravity="center"
                android:hint="@string/source"
                android:paddingLeft="10dp"
                android:layout_marginLeft="1dp"
                android:paddingStart="10dp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/search"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="1dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/searchback"
                android:gravity="center"
                android:hint="@string/search"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:layout_marginLeft="1dp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/destination"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="1dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/searchback"
                android:gravity="center"
                android:hint="@string/destination"

                android:layout_marginLeft="1dp"
               />
        </FrameLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/propose"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/searchback"
                android:gravity="center"
                android:hint="@string/propose_a_way"
                />

        </FrameLayout>
    </LinearLayout>

