<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.mourad.navigationandroid.SignUp">

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="131dp"
        android:layout_marginEnd="4dp"
        android:columnCount="2"
        android:overScrollMode="ifContentScrolls"
        android:scrollIndicators="right"
        android:scrollbarFadeDuration="3"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="4dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/newmessage" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="293dp"
            android:layout_height="70dp"
            android:background="@drawable/user_input"
            android:gravity="center"
            android:hint="@string/mail"
            android:inputType="textEmailAddress" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/lockedpadlock" />

        <EditText
            android:id="@+id/etPsw"
            android:layout_width="293dp"
            android:layout_height="70dp"
            android:background="@drawable/user_input"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="13dp"
            app:srcCompat="@drawable/lockedpadlock" />

        <EditText
            android:id="@+id/et_confPsw"
            android:layout_width="293dp"
            android:layout_height="70dp"
            android:background="@drawable/user_input"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buSignUpNow"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/animation_btn2"
            android:text="@string/signup"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

    </GridLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="77dp"
        android:text="Sign Up Now"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/btn_login2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="47dp"
        android:layout_marginStart="36dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FF2F2D2D"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="36dp" />

    <Button
        android:id="@+id/btn_login2"
        android:layout_width="60dp"
        android:layout_height="19dp"
        android:layout_marginBottom="47dp"
        android:layout_marginEnd="105dp"
        android:background="@android:color/transparent"
        android:onClick="btnLogin"
        android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="105dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
