<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.example.mourad.navigationandroid.ForgetPsw"
    tools:layout_editor_absoluteY="25dp">


    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn_refresh"
        android:layout_alignBottom="@+id/btn_refresh"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:layout_toLeftOf="@+id/btn_refresh"
        android:layout_toStartOf="@+id/btn_refresh"
        android:text="Send Verification" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="146dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:text="@string/refresh" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_send"
        android:layout_alignLeft="@+id/btn_send"
        android:layout_alignStart="@+id/btn_send"
        android:layout_marginBottom="160dp"
        android:text="@string/emaaaaail" />

    <TextView
        android:id="@+id/txt_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt_email"
        android:layout_alignStart="@+id/txt_email"
        android:layout_alignTop="@+id/txt_email"
        android:layout_marginTop="55dp"
        android:text="@string/status_of_verify_string_email" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txt_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="44dp"
        android:contextClickable="false"
        android:elegantTextHeight="false"
        android:ems="10"
        android:inputType="text|textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="Please verify your email"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>